z-index fixed

--- a/bytychtelnica/css/byty.css
+++ b/bytychtelnica/css/byty.css
@@ -1,6 +1,7 @@
 #header{
   opacity: 1 !important;
   display: block;
+  z-index: 1;
 }
 .mainImg{
   position: relative;
@@ -9,12 +10,12 @@
   margin-left: auto;
   width: 1024px;
   height: 1024px;
-  z-index: -1;
+  z-index: 0;
   background: url("../image/1nadpodlaz.jpg");
   background-size: cover;
 }
 .hoverArea{
-  background-color: red;
+  background-color: transparent;
   width: 670px;
   height: 50px;
   position: absolute;
@@ -22,7 +23,6 @@
   top: 47%;
   transform: skewY(-7.5deg);
   z-index: 1;
-
 }
 
 @media only screen and (max-width: 1024px) {
